--- a/posters/base/base.scss
+++ b/posters/base/base.scss
@@ -44,7 +44,7 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
     }
 
     pre, code, samp, .monospace {
-        font-family: "Ubuntu Mono", monospace;
+        font-family: "Fira Code", monospace;
     }
 
     b {
