simcommand/chiseltest poster

--- a/posters/posters/2023-slice_summer-fuzzing/index.jinja2
+++ b/posters/posters/2023-slice_summer-fuzzing/index.jinja2
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block footer_center %}
-    {rohaga, vighnesh.iyer}@berkeley.edu
+    {rohaga, vighnesh.iyer, bora}@berkeley.edu
 {% endblock %}
 
 {% block footer_right %}
@@ -166,7 +166,7 @@ def genSExpr(depth: Int = 0): Gen[SExpr] =
 <article>
   <header><h3>RV64UI StimGen Fuzzing</h3></header>
   <ul>
-    <li>A rv32ui stimulus generator with basic sequences (Inst, RAW, Loop, Branch) was created using this API</li>
+    <li>A rv64ui stimulus generator with basic sequences (Inst, RAW, Loop, Branch) was created using this API</li>
     <li>The generator is put in a parametric fuzzing loop with spike's memory model</li>
   </ul>
   <img src="./figs/fuzzing/spike_fuzzing.svg" />
