--- a/posters/posters/2023-slice_summer-recipes/index.jinja2
+++ b/posters/posters/2023-slice_summer-recipes/index.jinja2
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block footer_center %}
-    {vighnesh.iyer, bryanngo}@berkeley.edu
+    {vighnesh.iyer, bryanngo, bora}@berkeley.edu
 {% endblock %}
 
 {% block footer_right %}
