--- a/posters/posters/2023-slice_summer-simcommand_chiseltest/index.jinja2
+++ b/posters/posters/2023-slice_summer-simcommand_chiseltest/index.jinja2
@@ -57,8 +57,8 @@
 <article>
   <header><h3>Motivation</h3></header>
   <ul>
-    <li>Move beyond SystemVerilog + UVM without compromising on features or performance</li>
     <li>Leverage general-purpose languages and their libraries, build systems, IDEs, and test frameworks</li>
+    <li>Move beyond SystemVerilog + UVM without compromising on features or performance</li>
   </ul>
 </article>
 
@@ -233,7 +233,7 @@ val t2 = for {
   <img src="./figs/simcommand/jni_vs_jna.svg" />
 
   <ul>
-    <li>Using JNI vs JNA as the FFI API <strong>improves performance by up to 100x</strong>
+    <li>Using JNI vs JNA as the FFI API <strong>improves performance by 10x</strong>
     <li>Integrated into chiseltest</li>
   </ul>
 </article>
