--- a/posters/posters/2023-slice_summer-rtl2graph/index.jinja2
+++ b/posters/posters/2023-slice_summer-rtl2graph/index.jinja2
@@ -66,68 +66,83 @@
   <header><h3>Our Proposal</h3></header>
   <img src="./figs/rtl2graph-examples/proposal.svg" />
   <ul>
-  <li>We may be able to use a GNN to learn a good latent representation of a FIRRTL netlist. Because collecting a full dataset with critical path and coverage data is expensive, we instead train the model on small subgraphs by masking out certain nodes and asking it to predict what node is present there.</li>
-  <li>Use this representation in a downstream network to predict test coverage before tests are run, and to estimate power and area metrics without running expensive synthesis.</li>
+  <li>Because collecting a full dataset with critical path and coverage data is expensive, we first train the model with pre-text tasks relevant to learning the structure and semantics of netlists (e.g learning to predict randomly masked node attributes).</li>
+  <li>Then, we fine-tune the pre-trained model on downstream tasks of predicting verification test coverage and estimating power and area metrics without running expensive synthesis.</li>
   </ul>
 </article>
 <article>
   <header><h3>Graph Implementation</h3></header>
-  <ul>  
-    <li> The lo-FIRRTL AST is analyzed in two passes: the first pass instantiates nodes for each hardware structure, and the second pass creates edges to represent input/output connections.</li>
-    <li> Different node types represent module inputs, module outputs, primary operators, muxes, registers, and memory so that the model can distinguish between these components. Left inputs and right inputs, as edges, are also distinguished where applicable. 
-    </li>
-    <ul>
-    <li> Combinatorial primary operators (ex. and, or) are represented by the same node type but have an operator field within the node which distinguishes different operators.
-    </li>
-    </ul>
-    <li> Subfield references (ex. <code>a.b.c <- d</code>) are "unwrapped" such that the expression's right-hand side is connected to the topmost expression of the left-hand side (<code>d</code> is connected as an input to <code>a</code>).
-    </li>
-  </ul> 
+  <p>The lo-FIRRTL AST is analyzed in two passes: the first pass instantiates nodes for each hardware structure, and the second pass creates edges to represent input/output connections.</p>
 </article>
 <article>
   <header><h3>Chisel Arbiter</h3></header>
   <img src="./figs/rtl2graph-examples/arbiter.svg" />
 </article>
 <article>
+  <header><h3>Node and Edge Representations</h3></header>
+  <ul>  
+    <li> Different node types represent module inputs, module outputs, primary operators, muxes, registers, and memory so that the model can distinguish between these components. Left inputs and right inputs, as edges, are also distinguished where applicable. 
+    </li>
+    <li> Combinatorial primary operators (ex. and, or) are represented by the same node type but have an operator field within the node which distinguishes different operators.
+    </li>
+  </ul> 
+  <pre class="fragment"><code class="language-scala small">
+    class Adder extends Module {
+      val io = IO(new Bundle {
+        val a = Input(UInt(8.W))
+        val b = Input(UInt(8.W))
+        val c = Output(UInt(9.W))
+      })
+      io.c := io.a +& io.b
+    }
+  </code></pre>
+  <pre class="fragment"><code class="small">
+    circuit Adder :
+    module Adder :
+      input io_a : UInt<8>
+      input io_b : UInt<8>
+      output io_c : UInt<9>
+
+      node _io_c_T = add(io_a, io_b)
+      io_c <= _io_c_T
+  </code></pre>
+  <img src="./figs/rtl2graph-examples/add.svg" />
+</article>
+<article>
+  <header><h3>Node and Edge Representations</h3></header>
+  <p> Subfield references (ex. <code>a.b.c <- d</code>) are "unwrapped" such that the expression's right-hand side is connected to the topmost expression of the left-hand side (<code>d</code> is connected as an input to <code>a</code>). </p>
+  <img src="./figs/rtl2graph-examples/subfield.svg" />
+</article>
+<article>
   <header><h3>Chisel Queue</h3></header>
   <img src="./figs/rtl2graph-examples/queue.svg" />
 </article>
 <article>
-  <header><h3>Blinky (Chisel Tutorial)</h3></header>
-  <pre class="fragment"><code class="language-scala small">class Blinky(freq: Int, startOn: Boolean = false) extends Module {
+  <header><h3>Complete Example (with Chisel + FIRRTL)</h3></header>
+  <pre class="fragment"><code class="language-scala small">class ExampleClass() extends Module {
       val io = IO(new Bundle {
-        val led0 = Output(Bool())
+        val a = Input(UInt(8.W))
+        val b = Input(UInt(8.W))
+        val c = Input(Bool())
+        val out = Output(UInt(16.W))
       })
-      // Blink LED every second using Chisel built-in util.Counter
-      val led = RegInit(startOn.B)
-      val (_, counterWrap) = Counter(true.B, freq / 2)
-      when(counterWrap) {
-        led := ~led
-      }
-      io.led0 := led
-    }
-}</pre></code>
-  <pre class="fragment"><code class="small">module Blinky :
-    input clock : Clock
-    input reset : UInt<1>
-    output io_led0 : UInt<1>
-    reg led : UInt<1>, clock with :
-      reset => (UInt<1>("h0"), led)
-    reg counterWrap_c_value : UInt<9>, clock with :
-      reset => (UInt<1>("h0"), counterWrap_c_value)
-    node counterWrap_wrap_wrap = eq(counterWrap_c_value, UInt<9>("h1f3"))
-    node _counterWrap_wrap_value_T = add(counterWrap_c_value, UInt<1>("h1"))
-    node _counterWrap_wrap_value_T_1 = tail(_counterWrap_wrap_value_T, 1)
-    node _GEN_0 = mux(counterWrap_wrap_wrap, UInt<1>("h0"), _counterWrap_wrap_value_T_1)
-    node _GEN_1 = mux(UInt<1>("h1"), _GEN_0, counterWrap_c_value)
-    node _GEN_2 = mux(UInt<1>("h1"), counterWrap_wrap_wrap, UInt<1>("h0"))
-    node _led_T = not(led)
-    node counterWrap = _GEN_2
-    node _GEN_3 = mux(counterWrap, _led_T, led)
-    io_led0 = led
-    led = mux(reset, UInt<1>("h0"), _GEN_3)
-    counterWrap_c_value = mux(reset, UInt<9>("h0"), _GEN_1)</pre></code>
-<img src="./figs/rtl2graph-examples/blinky.svg" />
+      val pipeA = RegNext(io.a)
+      val pipeB = RegNext(io.b)
+      val outPipe = RegNext(pipeA + pipeB)
+      io.out := chisel3.Mux(io.c, outPipe, pipeB)
+    }</pre></code>
+  <pre class="fragment"><code class="small">module ExampleClass :
+    [declarations omitted]
+    node _outPipe_T = add(pipeA, pipeB)
+    node _outPipe_T_1 = tail(_outPipe_T, 1)
+    node _io_out_T = mux(io_c, outPipe, pipeB)
+    
+    io_out = pad(_io_out_T, 16)
+    pipeA = io_a
+    pipeB = io_b
+    outPipe = _outPipe_T_1
+  </code></pre>
+  <img src="./figs/rtl2graph-examples/example.svg"/>
 </article>
 <article> 
   <header><h3>Evaluation</h3></header>
